# sibsutis_wsl

comp_arch/my-first-project/: .gitignore  Makefile  README.md
comp_arch/my-first-project/src/main/: main.c  term.c  test_bc.c  test_rdkey.c  test_term.c
comp_arch/my-first-project/src/mySimpleComputer/: myBigChars.c  myBigChars.h  myBigCharsCreate.c  myReadkey.c  myReadkey.h  mySimpleComputer.c  mySimpleComputer.h  myTerm.c  myTerm.h
comp_arch/my-first-project/translators/: prog1  prog2  program.sasm  sat  sbt  simpass.txt  simpbas.txt  simple_assembler.cpp  simple_basic.cpp
comp_math/course/: data.txt  main.c
comp_math/course/graphs/: d.plt  dead.txt  e.plt  exposed.txt  i.plt  infected.txt  r.plt  recovered.txt  s.plt  susceptible.txt
comp_math/interpol/: interpolation.cpp  test.cpp  test.txt
comp_math/lab1/: task1.cpp  test1.txt  test2.txt  test3.txt  test4.txt  zd.txt
comp_math/lab3/: main.cpp
comp_math/lab4/: main.cpp
comp_math/lab5/: input.txt  main.cpp
cpp/: bash.sh  build.txt
cpp/examples/cmake-3.27.4-tutorial-source/Step1/: CMakeLists.txt  tutorial.cxx
cpp/examples/cmake-3.27.4-tutorial-source/Step1/Step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/examples/cmake-3.27.4-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cpp/examples/cmake-3.27.4-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cpp/examples/cmake-3.27.4-tutorial-source/Step2/Step2_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/examples/cmake-3.27.4-tutorial-source/Step2/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
cpp/examples/cmake-3.27.4-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
cpp/examples/gtest_example/my_project/: CMakeLists.txt  hello_test.cc
cpp/examples/lab2/: class  class.cpp  exmp1.cpp  exmp2.cpp  exmp3.cpp  exmp4.cpp  sass
cpp/examples/lab3/: a.out  index_primer.cpp
cpp/fts-mutuev-iv123s17/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  config.xml
cpp/fts-mutuev-iv123s17/cmake/: CompileOptions.cmake
cpp/fts-mutuev-iv123s17/include/: CMakeLists.txt
cpp/fts-mutuev-iv123s17/include/libfts/: libindex.hxx  libparse.hxx  libsearcher.hxx
cpp/fts-mutuev-iv123s17/include/libmath/: addition.hxx
cpp/fts-mutuev-iv123s17/src/: CMakeLists.txt
cpp/fts-mutuev-iv123s17/src/app/: CMakeLists.txt  add.cxx  indexer.cxx  main.cxx  searcher.cxx
cpp/fts-mutuev-iv123s17/src/libfts/: CMakeLists.txt
cpp/fts-mutuev-iv123s17/src/libfts/libindex/: libindex.cpp
cpp/fts-mutuev-iv123s17/src/libfts/libparse/: libparse.cpp
cpp/fts-mutuev-iv123s17/src/libfts/libsearcher/: libsearcher.cpp
cpp/fts-mutuev-iv123s17/src/libmath/: CMakeLists.txt
cpp/fts-mutuev-iv123s17/src/libmath/libmath/: addition.cxx
cpp/fts-mutuev-iv123s17/tests/: CMakeLists.txt
cpp/fts-mutuev-iv123s17/tests/gtests/: CMakeLists.txt  gtest_addition.test.cpp  gtest_parse.test.cpp
cpp/sudoku_proj/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
cpp/sudoku_proj/cmake/: CompileOptions.cmake
cpp/sudoku_proj/include/lib/: sudoku.hpp
cpp/sudoku_proj/src/app/: CMakeLists.txt  main.cpp
cpp/sudoku_proj/src/lib/: CMakeLists.txt  sudoku.cpp
dsa/lr1/: count.c  data.txt  merge.c
dsa/lr2/data/: exp2.txt  exp6.txt
dsa/lr2/lib/: hashtab.h
dsa/lr2/other/: pract.c  test.c  zd1.c
dsa/lr2/plts/: exp6.2.plt
dsa/lr2/src/: exp6.c
dsa/second_sem/lr1/: bubble.c  plot.plt
dsa/second_sem/lr2/: Makefile
dsa/second_sem/lr2/data/: exp1.txt  exp6.2.txt
dsa/second_sem/lr2/lib/: bstree.c  bstree.h  hashtab.c
dsa/second_sem/lr2/other/: split_by_words.sh
dsa/second_sem/lr2/plts/: exp1.plt  exp2.plt  exp6.plt
dsa/second_sem/lr2/src/: exp1.c  exp2.c
dsa/third_sem/course/: Makefile  b.txt  hash_table.c  hash_table.h  hash_table_perf.c  hash_table_perf.h  hash_table_uni.c  hash_table_uni.h  main.c  main_perf  main_perf.c  main_uni.c
dsa/third_sem/course/tests/: test1  test1.c
dsa/third_sem/lab1/: avltree.c  avltree.h  data.txt  exp1.plt  main.c  words.txt
dsa/third_sem/lab2/: main.c  rez.txt  tries.c  tries.h  words.txt
edu_pract/: aco  build.sh
edu_pract/src/: aco.cpp  aco.h  main.cpp  randoms.cpp
pct/lab1/pct-spring-lab1/cache-dgemm/: dgemm  dgemm-unroll  dgemm.c
pct/lab1/pct-spring-lab1/pipeline-loop-unrolling/: prog  prog.c
pct/lab2/: .#task.c  build.sh  data.txt  script.plt  speedup.txt  task  task.c
pct/lab3/: a.out  build1.sh  build2.sh  data1.txt  data2.txt  script1.plt  script2.plt  serMK.c  speedup1.txt  speedup2.txt  task1  task1.c  task2  task2.c
pct/lab4/: baza.txt  build.sh  data.txt  script1.plt  serial  serial.c  speedup.txt  task  task.c  ver_1  ver_1.c  ver_2  ver_2.c  ver_3  ver_3.c  ver_4  ver_4.c  ver_5  ver_5.c
pct/lab5/: a.out  qsort.cpp  script100M.plt  script10M.plt  script1M.plt  speedup100M.txt  speedup10M.txt  speedup1M.txt
pct2.0/course_work/: data.txt  main.c  script.plt
pct2.0/lab3/: gemv.c
prog/CWP/: Makefile  README.md  prog_s2_cw_report.doc
prog/CWP/src/: hash.c  hash.h  integ.c  integ.h  main.c  md5.c  md5.h  stat.h
sdt/cw/: frag  frag.c  output.txt  tailsource.c  test  test.c
sdt/cw/cw-iv-123_output-fragments/: .gitignore  Makefile  OUTPUT  README.md
sdt/cw/cw-iv-123_output-fragments/docs/: tech-requirement.md
sdt/cw/cw-iv-123_output-fragments/src/frag/: main.c
sdt/cw/cw-iv-123_output-fragments/src/libfrag/: frags.c  frags.h
sdt/cw/cw-iv-123_output-fragments/test/: fragtest.c
sdt/lr0/hw-buuzytrash/: main.c  y  y.pub
sdt/lr1/geometry-buuzytrash/: Makefile
sdt/lr1/geometry-buuzytrash/src/libgeom/: geom.c
